finalizando curso de css

--- a/modulo01/calc.html
+++ b/modulo01/calc.html
@@ -15,11 +15,12 @@
       width: 100vw;
       height: 80px;
       background-color: black;
+      position: fixed;
     }
     .conteudo{
-        background-color: aqua;
+        background-image: url(../modulo01/img/rrv.jpg);
         width: 100vw;
-        height: calc(100vh - 80px);
+        height:130vh;
     }
   </style>
   <body>
